syntax = "proto3";

option csharp_namespace = "GrpcClient";

package user;

import "game.proto";

service TransferUserService {
	rpc TransferUser(User) returns (User);
}

message User {
  string UserName = 1;
  repeated ListOfGames Games = 2;
}

message ListOfGames {
  repeated Game games = 1;
}
